docs/css/style.css
:root {
  --c-primary: #fcf0ea;
  --c-secondary: #e9e2f0;
  --c-tertiary: #d8ece8;
  --c-glass: rgba(0, 122, 255, 0.15);
  --c-ring: #0066cc;
  --c-black: #111;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: normal;
}

html {
  font-size: 62.5%;
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

a,
button {
  will-change: transform;
  transition: filter 0.25s,
    transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275),
    background-color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1),
    outline-offset 0.2s linear;
}

a:active,
button:active {
  transform: scale(0.95);
}

:focus-visible {
  outline: 2px solid var(--c-ring);
  outline-offset: 4px;
}

a:focus-visible {
  transform: scale(1.03);
}

a:hover {
  text-decoration: underline;
}

.flex {
  display: flex;
}

.col {
  flex-direction: column;
}

.center {
  justify-content: center;
}

.space {
  justify-content: space-around;
}

.root {
  width: 140rem;
}

.content-full {
  width: 100%;
}

.container {
  padding: 6.4rem;
}

.container:not(:last-child) {
  margin-bottom: 4.8rem;
}

.container:nth-child(1) {
  background-color: var(--c-primary);
}

.container:nth-child(2) {
  background-color: var(--c-secondary);
}

.container:nth-child(3) {
  background-color: var(--c-tertiary);
}

.container:nth-child(4) {
  background-color: var(--c-black);
}

.header {
  font-size: 6rem;
  margin-bottom: 1rem;
}

.subhead {
  font-size: 1.8rem;
  line-height: 1.5;
}

.card {
  background-color: #fff;
  padding: 3.2rem;
  margin-top: 3.2rem;
  border-radius: 1.6rem;
}

.quote {
  font-size: 2rem;
  margin-bottom: 3.2rem;
}

.list {
  font-size: 1.6rem;
  line-height: 1.6;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 6.4rem;
  grid-row-gap: 3.2rem;
}

.white {
  color: #fff;
}

.avatar {
  border-radius: 50%;
  margin-right: 2rem;
  height: 10rem;
}

.btn {
  display: block;
  color: #000;
  font-weight: bold;
  font-size: 1.7rem;
  padding: 1.6rem 2.4rem;
  border-radius: 1rem;
}

.github {
  background-color: var(--c-tertiary);
}

.linked {
  background-color: var(--c-glass);
}

.inst {
  background-color: var(--c-primary);
}

.email {
  background-color: var(--c-secondary);
}

.btn:not(:last-child) {
  margin-bottom: 0.8rem;
}

.btn:hover {
  filter: contrast(0.8) brightness(1.15);
}

@media screen and (max-width: 768px) {
  .grid {
    grid-template-columns: 1fr;
    grid-row-gap: 0;
  }

  .container {
    padding: 1.6rem;
  }

  .card {
    padding: 2rem;
  }
}

